figured out wrapping and fixed background

--- a/css/main.css
+++ b/css/main.css
@@ -26,28 +26,45 @@ input {
   padding-top: 5vw;
 }
 
+@media only screen and (min-width: 1000px) {
+  .title {
+    font-size: 8vw;
+  }
+  .current-temp {
+
+  }
+}
+
  /* ========================================
   * Temperature
   * ======================================== */
+.cold, .warm, .hot {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.cold {
+  background: #212fff
+}
+
+.warm {
+  background: #ff992d
+}
+
+.hot {
+  background: #f45641
+}
+
  .cold .all {
    background: linear-gradient(#20ecff, #212fff);
-   background-repeat: no-repeat;
-   background-size: cover;
-   height: 100vh;
  }
 
  .warm .all {
    background: linear-gradient(#f4eb41, #ff992d);
-   background-repeat: no-repeat;
-   background-size: cover;
-   height: 100vh;
  }
 
  .hot .all{
    background: linear-gradient(#f4a641, #f45641);
-   background-repeat: no-repeat;
-   background-size: cover;
-   height: 100vh;
  }
 
 
@@ -55,6 +72,17 @@ input {
  /* ========================================
   * Weather
   * ======================================== */
+.icon {
+  width: 20vw;
+  height: 20vw;
+  background-repeat: no-repeat;
+}
+
+.condition {
+  max-width: 600px;
+}
+
+
 .thunderstorm {
 
 }
@@ -75,12 +103,12 @@ input {
 
 }
 
-.clear {
-  background-image: url(assets/clear.svg);
+.clear .icon {
+  background-image: url(/assets/clear.svg);
 }
 
-.clouds {
-
+.clouds .icon {
+  background-image: url(/assets/clouds.svg);
 }
 
 /* ========================================
@@ -88,7 +116,7 @@ input {
  * ======================================== */
 
  .calm {
-   background-image: url(assets/calmn.svg);
+   background-image: url(assets/calm.svg);
  }
 
  .breezy {
